--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/logo.png" />
+    <link rel="icon" href="/logo.jpg" />
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
@@ -555,7 +555,7 @@
               "
             >
               <div class="footer-social-info fadeInUp" data-wow-delay="0.4s">
-                <a href="https://t.me/BabyBuilderBNB">
+                <a href="https://t.me/BuildTober_bsc">
                   <img
                     src="/img/core-img/telegram.png"
                     style="max-width: 50px; margin: 5px"
@@ -564,7 +564,7 @@
                   />
                 </a>
 
-                <a href="https://x.com/_BabyBuilder">
+                <a href="https://x.com/BuildTober_bsc">
                   <img
                     src="/img/core-img/twitter.png"
                     style="max-width: 50px; margin: 5px"
