--- a/utility.html
+++ b/utility.html
@@ -13,7 +13,7 @@
         integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/logo.png" />
+    <link rel="icon" href="/logo.jpg" />
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
@@ -320,12 +320,12 @@
 
                 <div class="col-12 col-lg-6 col-md-6">
                     <div class="footer-social-info fadeInUp" data-wow-delay="0.4s">
-                        <a href="https://t.me/BabyBuilderBNB">
+                        <a href="https://t.me/BuildTober_bsc">
                             <img src="/img/core-img/telegram.png" style="max-width: 50px; margin: 5px" alt=""
                                 srcset="" />
                         </a>
 
-                        <a href="https://x.com/_BabyBuilder">
+                        <a href="https://x.com/BuildTober_bsc">
                             <img src="/img/core-img/twitter.png" style="max-width: 50px; margin: 5px" alt=""
                                 srcset="" />
                         </a>
