--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@
                 </h1> -->
                 <!-- <h2 class="title-cls">$BUILDTOBER</h2> -->
                 <p class="w-text fadeInUp" data-wow-delay="0.3s">
-                  He’s still a baby, but already building. Once a builder —
-                  always BUILDER.
+                  Thank God It's Buildtober
                 </p>
                 <div class="">
                   <div class="contract-add contract-border align-items-center">
