--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <a class="nav-link" href="#faq">How To Buy</a>
           </li> -->
             <!-- <li class="nav-item">
-            <a href="https://pancakeswap.finance/swap?outputCurrency=0xcomingsoon"
+            <a href="https://pancakeswap.finance/swap?outputCurrency=0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F"
               class="nav-link">Buy Now</a>
           </li>
           <li class="nav-item">
@@ -153,7 +153,7 @@
 
             <li class="lh-55px">
               <a
-                href="https://pancakeswap.finance/swap?outputCurrency=0xcomingsoon"
+                href="https://pancakeswap.finance/swap?outputCurrency=0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F"
                 class="btn copy-btn v2 ml-4"
                 target="_blank"
                 >Buy Now</a
@@ -194,18 +194,18 @@
                 </h1> -->
                 <!-- <h2 class="title-cls">$BUILDTOBER</h2> -->
                 <p class="w-text fadeInUp" data-wow-delay="0.3s">
-                  Thank God It's Buildtober
+                  Thank God It's Buildtober.
                 </p>
                 <div class="">
                   <div class="contract-add contract-border align-items-center">
                     <i class="fa fa-copy"></i>
                     <input
                       type="text"
-                      value="0xcomingsoon"
+                      value="0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F"
                       id="myInput"
                     />
                     <span class="b-text bold">
-                      0xcomingsoon</span
+                      0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F</span
                     >
                     <div class="tooltipy">
                       <span class="tooltiptext" id="myTooltip"
@@ -347,7 +347,7 @@
               <a
                 class="btn copy-btn v2 mt-15 fadeInUp"
                 data-wow-delay="0.6s"
-                href="https://pancakeswap.finance/swap?outputCurrency=0xcomingsoon"
+                href="https://pancakeswap.finance/swap?outputCurrency=0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F"
               >
                 Buy Now</a
               >
@@ -424,7 +424,7 @@
       tokenomics
     </h2>
     <p style="font-size: 2.2em; margin-bottom: 30px; word-break: break-all">
-      CA: 0xcomingsoon
+      CA: 0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F
     </p>
     <p style="font-size: 2.2em; margin-bottom: 30px">TAX : 0/0</p>
 
@@ -432,7 +432,7 @@
 
     <p style="font-size: 2.2em; margin-bottom: 30px">SUPPLY 1B</p>
 
-    <a class="btn copy-btn v2 mt-15 fadeInUp" data-wow-delay="0.6s" href="https://www.dextools.io/app/en/bnb/pair-explorer/0xcomingsoon">chart $BUILDTOBER</a>
+    <a class="btn copy-btn v2 mt-15 fadeInUp" data-wow-delay="0.6s" href="https://www.dextools.io/app/en/bnb/pair-explorer/0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F">chart $BUILDTOBER</a>
     <p id="airdropResponse" style="margin-top: 20px; color: #28a745"></p>
   </section> -->
 
@@ -572,7 +572,7 @@
                   />
                 </a>
                 <a
-                  href="https://www.dextools.io/app/en/bnb/pair-explorer/0xcomingsoon"
+                  href="https://www.dextools.io/app/en/bnb/pair-explorer/0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F"
                 >
                   <img
                     src="/img/core-img/dext.png"
@@ -582,7 +582,7 @@
                   />
                 </a>
                 <a
-                  href="https://dexscreener.com/bsc/0xcomingsoon"
+                  href="https://dexscreener.com/bsc/0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F"
                 >
                   <img
                     src="/img/core-img/dexs.png"
