--- a/utility.html
+++ b/utility.html
@@ -117,11 +117,11 @@
 
 
                     <li class="lh-55px">
-                        <a href="https://pancakeswap.finance/swap?outputCurrency=0xcomingsoon"
+                        <a href="https://pancakeswap.finance/swap?outputCurrency=0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F"
                             class="btn copy-btn v2 ml-3">Buy Now</a>
                     </li>
                     <li class="lh-55px">
-                        <a href="https://dexscreener.com/bsc/0xcomingsoon" class="btn copy-btn v2 ml-3">Chart</a>
+                        <a href="https://dexscreener.com/bsc/0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F" class="btn copy-btn v2 ml-3">Chart</a>
                     </li>
                    
                 </ul>
@@ -189,9 +189,9 @@
                 It’s how real builders connect.
             </p>
 
-            <a class="btn copy-btn v2 mt-15 fadeInUp" data-wow-delay="0.6s" href="https://pancakeswap.finance/swap?outputCurrency=0xcomingsoon">
+            <a class="btn copy-btn v2 mt-15 fadeInUp" data-wow-delay="0.6s" href="https://pancakeswap.finance/swap?outputCurrency=0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F">
                 Buy Now</a>
-                <a class="btn copy-btn v2 mt-15 fadeInUp" data-wow-delay="0.6s" href="https://dexscreener.com/bsc/0xcomingsoon">
+                <a class="btn copy-btn v2 mt-15 fadeInUp" data-wow-delay="0.6s" href="https://dexscreener.com/bsc/0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F">
               Chart</a>
         </div>
     </section>
@@ -287,7 +287,7 @@
 
     <p style="font-size: 2.2em; margin-bottom: 30px">SUPPLY 1B</p>
 
-    <a class="btn copy-btn v2 mt-15 fadeInUp" data-wow-delay="0.6s" href="https://www.dextools.io/app/en/bnb/pair-explorer/0xcomingsoon">chart $BUILDTOBER</a>
+    <a class="btn copy-btn v2 mt-15 fadeInUp" data-wow-delay="0.6s" href="https://www.dextools.io/app/en/bnb/pair-explorer/0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F">chart $BUILDTOBER</a>
     <p id="airdropResponse" style="margin-top: 20px; color: #28a745"></p>
   </section> -->
 
@@ -330,10 +330,10 @@
                                 srcset="" />
                         </a>
                         <a
-                            href="https://www.dextools.io/app/en/bnb/pair-explorer/0xcomingsoon">
+                            href="https://www.dextools.io/app/en/bnb/pair-explorer/0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F">
                             <img src="/img/core-img/dext.png" style="max-width: 50px; margin: 5px" alt="" srcset="" />
                         </a>
-                        <a href="https://dexscreener.com/bsc/0xcomingsoon">
+                        <a href="https://dexscreener.com/bsc/0x5009b6138cCc2A578Bd7755Ecf37D33a333A5a1F">
                             <img src="/img/core-img/dexs.png" style="max-width: 50px; margin: 5px" alt="" srcset="" />
                         </a>
                     </div>
